fix minor layout problems

--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -1,6 +1,6 @@
 .transition-fade {
     opacity: 1;
-    transition: 250ms;
+    transition: 500ms;
 }
 
 html.is-animating .transition-fade {
