--- a/src/sass/components/_progess-bar.scss
+++ b/src/sass/components/_progess-bar.scss
@@ -1,9 +1,7 @@
-@use '../abstracts/mixins'as m;
-@use '../abstracts/variables'as c;
-@use '../abstracts/media-queries' as *;
+@use '../abstracts' as *;
 
 .progress-bar {
-    @include m.flexCenter;
+    @include flexCenter;
     height: 4rem;
 
     &__circle {
@@ -11,11 +9,11 @@
         height: .4rem;
         width: .4rem;
         border-radius: 50%;
-        background-color: c.$main-color;
+        background-color: $main-color;
         margin: 1rem;
 
         &--active {
-            background-color: c.$gold-1;
+            background-color: $gold-1;
         }
 
         &::before {
@@ -27,7 +25,7 @@
             height: .85rem;
             width: .85rem;
             border-radius: 50%;
-            border: 1px solid c.$main-color;
+            border: 1px solid $main-color;
         }
     }
 
@@ -40,16 +38,16 @@
         font-size: .7rem;
         min-width: 4rem;
         transform: translate(-50%, -50%);
-        color: c.$dark-elements;
+        color: $dark-elements;
 
         &--active {
-            color: c.$gold-1;
+            color: $gold-1;
         }
     }
 
     &__line {
         width: clamp(2rem, 24vw, 7rem);
-        border-top: 1px solid c.$main-color;
+        border-top: 1px solid $main-color;
     }
 
 }
