--- a/src/sass/layout/_download.scss
+++ b/src/sass/layout/_download.scss
@@ -3,11 +3,8 @@
 .background-video {
     @include m.flexCenter;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -100;
+    inset: 0;
+    z-index: -1;
     filter: blur(4px);
     opacity: .2;
 }
